# mysql-connector

./: .gitignore  Makefile.am  README.md  build.sh  config.h.in  configure.ac  mysql-connector.pc.in
src/: Makefile.am  mysql-connector.cpp
tests/: Makefile.am  test-mysqlclient-database-connector.cpp
